<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="1"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="15dp"
    android:scrollbarStyle="outsideOverlay"
    android:textIsSelectable="true" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2" >

        <TextView
            android:id="@+id/txtCourseCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginBottom="2dp"
            android:paddingRight="5dp"
            android:text="@string/section"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/txtSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="0"
            android:text="@string/section"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </GridLayout>

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|top"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtRemaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="68dp"
        android:text="@string/remaining"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtCRN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crn"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:paddingBottom="20dp" />

</LinearLayout>